src/objects/ssv4__Wiki__c.object
<CustomObject>
    <customHelpPage>ssv4__help</customHelpPage>
    <fields>
        <fullName>ssv4__Article__c</fullName>
        <label>Article</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ssv4__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>ssv4__Project__c</referenceTo>
        <relationshipLabel>Wikis</relationshipLabel>
        <relationshipName>Wikis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssv4__Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssv4__Wiki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wiki</label>
        <referenceTo>ssv4__Wiki__c</referenceTo>
        <relationshipLabel>Wikis</relationshipLabel>
        <relationshipName>Wikis</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wiki</label>
    <listViews>
        <fullName>ssv4__All_Wiki</fullName>
        <columns>NAME</columns>
        <columns>ssv4__Project__c</columns>
        <columns>ssv4__Type__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All Wiki</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Wiki Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wikis</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>